src/components/Account/AccountTransaction/AccountTxPanel.scss
.accountPanel {
  .content {
    padding: 0 24px 32px;
  }

  .inputWrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
  }

  .smallInputChild{
    width: 22vh;

    border-radius: 4px 0 0 4px !important;
    //border-right: 10px !important;
  }

  .selectChild {
    margin-right: 10px;
    align-self: flex-end;
    height: 36.5px;
    border: 2px solid #dde2ec;

    border-radius: 0 4px 4px 0 !important;
    //border-left: 10px !important;

    &::placeholder {
      color: #999;
    }

    &:focus {
      outline: 0;
      color: #495057;
      border-color: #047bf8;
    }
  }

  .inputChild {
    flex-grow: 2;
  }

  .buttonWrapper {
    display: flex;
    justify-content: flex-end;

  }

  input[type=number]::-webkit-inner-spin-button,
  input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
}

